k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-trainer-service
spec:
  type: LoadBalancer # Exposes the app externally
  selector:
    app: personal-trainer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
